--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [workspace]
-members = ["mcache-core", "mcache-macro"]
+members = ["mcache-core", "mcache-attr", "mcache-call"]
 
 [workspace.dependencies]
 once_cell = "1"
@@ -21,12 +21,15 @@ fred = { version = "10.1.0", features = [
 ] }
 serde_json = "1"
 serde = { version = "1.0", features = ["derive"] }
-futures = { version = "0.3", features = ["executor"] }
+tokio = { version = "1", features = ["full"] }
 
 [dependencies]
-mcache-macro = { path = "./mcache-macro" }
-mcache-core  = { path = "./mcache-core" }
-fred         = { workspace = true }
-serde_json   = { workspace = true }
-serde        = { workspace = true }
-futures      = { workspace = true }
+mcache-attr = { path = "./mcache-attr" }
+mcache-call = { path = "./mcache-call" }
+mcache-core = { path = "./mcache-core" }
+fred        = { workspace = true }
+serde_json  = { workspace = true }
+serde       = { workspace = true }
+tokio       = { workspace = true }
+
+[dev-dependencies]
