--- a/mcache-call/Cargo.toml
+++ b/mcache-call/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "mcache-macro"
+name    = "mcache-call"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,6 +8,5 @@ proc-macro = true
 
 [dependencies]
 proc-macro2 = { workspace = true }
-quote = { workspace = true }
-syn = { workspace = true }
-regex = { workspace = true }
+quote       = { workspace = true }
+syn         = { workspace = true }
